--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "cSpell.words": [
-        "минут"
+        "Jost",
+        "Relawey",
+        "ontent",
+        "speaky",
+        "swiper",
+        "минут",
+        "сontent"
     ]
 }
