--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "author": "Andrew Morozov",
     "license": "ISC",
     "devDependencies": {
-        "@fancyapps/fancybox": "^3.5.7",
-        "browser-sync": "^2.26.13",
+        "browser-sync": "^2.27.10",
         "gulp": "^4.0.2",
-        "gulp-autoprefixer": "^7.0.1",
+        "gulp-autoprefixer": "^8.0.0",
         "gulp-concat": "^2.6.1",
         "gulp-cssmin": "^0.2.0",
         "gulp-rename": "^2.0.0",
-        "gulp-sass": "^4.1.0",
+        "gulp-sass": "^5.0.0",
         "gulp-uglify": "^3.0.2",
-        "magnific-popup": "^1.1.0",
-        "mixitup": "^3.3.1",
         "normalize.css": "^8.0.1",
+        "sass": "~1.32.12",
         "slick-carousel": "^1.8.1",
+        "mixitup": "^3.3.1",
         "swiper": "^6.5.6",
+        "magnific-popup": "^1.1.0",
         "video.js": "^7.10.2"
     },
     "dependencies": {
+        "aos": "^2.3.4",
         "rateyo": "^3.0.0-alpha.2"
     }
 }
